--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,6 +1,7 @@
 .profile {
   display: block;
-  margin: 20px;
+  margin: 0 auto;
+  margin-top: 20px;
   width: 300px;
   height: 100%;
   border: 1px solid var(--secondary-text-color);
