--- a/src/components/TransactionsHistory/TransactionsHistory.module.css
+++ b/src/components/TransactionsHistory/TransactionsHistory.module.css
@@ -1,6 +1,7 @@
 .transactionHistory {
   display: block;
-  margin: 20px;
+  margin: 0 auto;
+  margin-top: 20px;
   width: 300px;
   height: 100%;
   border-radius: 5px;
